--- a/src/styles/components/_nft-item.scss
+++ b/src/styles/components/_nft-item.scss
@@ -64,6 +64,7 @@
       font-size: 16px;
       font-weight: 600;
       margin: 5px 0;
+      height: 50px;
       span {
         display: flex;
         align-items: center;
