--- a/src/styles/components/_nft-item.scss
+++ b/src/styles/components/_nft-item.scss
@@ -11,6 +11,22 @@
   overflow: hidden;
   transition: 0.5s;
   cursor: pointer;
+  .network {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 24px;
+    height: 24px;
+    background: rgba(255, 255, 255, 0.7);
+    border-radius: 100%;
+    padding: 5px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 100%;
+    }
+  }
   .nft-image {
     width: 100%;
     height: 170px;
