--- a/src/styles/pages/_nft-details.scss
+++ b/src/styles/pages/_nft-details.scss
@@ -806,3 +806,22 @@
     margin-bottom: 20px;
   }
 }
+
+.offer-modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  label {
+    align-self: flex-start;
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+  .chakra-numberinput {
+    width: 100%;
+  }
+  button,
+  button:hover {
+    margin: 20px 0;
+    background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
+  }
+}
