--- a/src/styles/pages/_nft-details.scss
+++ b/src/styles/pages/_nft-details.scss
@@ -169,10 +169,12 @@
         }
       }
       .auc-tray {
+        position: relative;
         box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.4);
         border-radius: 16px;
         padding: 2px;
-        margin: 20px 0;
+        margin-top: 20px;
+        margin-bottom: 50px;
         background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
         .auc-tray-body {
           display: flex;
@@ -229,6 +231,15 @@
                 }
               }
             }
+          }
+        }
+        .auction-end {
+          position: absolute;
+          right: 0;
+          bottom: -35px;
+          font-size: 20;
+          span {
+            font-weight: 700;
           }
         }
       }
@@ -345,17 +356,6 @@
             }
           }
         }
-      }
-      .auction-end {
-        margin-top: -20px;
-        margin-bottom: 20px;
-        justify-content: flex-end;
-        display: flex;
-        font-weight: 600;
-        font-size: 20px;
-        line-height: 31px;
-        text-transform: uppercase;
-        color: #ffffff;
       }
       .details-stats {
         position: relative;
