--- a/src/styles/pages/_nft-details.scss
+++ b/src/styles/pages/_nft-details.scss
@@ -56,7 +56,7 @@
         }
       }
       .nft-description {
-        font-size: 18px;
+        font-size: 16px;
         font-weight: 400;
         text-align: justify;
       }
@@ -73,7 +73,7 @@
           border-radius: 100%;
           margin-right: 10px;
         }
-        span {
+        a {
           font-size: 24px;
           font-weight: 500;
         }
@@ -81,7 +81,7 @@
       .name {
         margin-top: 10px;
         font-family: SVN-Transformer;
-        font-size: 72px;
+        font-size: 50px;
         line-height: 60px;
         transition: 0.1s;
         @include to(sm) {
@@ -93,6 +93,9 @@
         justify-content: space-between;
         align-items: center;
         font-size: 20px;
+        a {
+          color: $cyan;
+        }
         .owner-stat {
           display: flex;
           align-items: center;
@@ -376,7 +379,7 @@
           justify-content: space-between;
           align-items: center;
           span {
-            font-size: 20px;
+            font-size: 16px;
             font-weight: 500;
             @include to(xs) {
               font-size: 16px;
