style: update popup modal

--- a/src/styles/configs/_chakra-custom.scss
+++ b/src/styles/configs/_chakra-custom.scss
@@ -22,6 +22,7 @@
   color: $purple3;
 }
 .chakra-modal__content {
+  border: 3px solid rgba(white, 0.2);
   background: linear-gradient(
     126.08deg,
     rgba(255, 255, 255, 0.3) 13.84%,
