--- a/src/styles/pages/_collection-details.scss
+++ b/src/styles/pages/_collection-details.scss
@@ -10,20 +10,20 @@
     margin-top: 20px;
     display: flex;
     align-items: center;
+    position: relative;
     svg {
+      position: absolute;
+      right: -40px;
       height: 30px;
-      margin-left: 20px;
-      margin-top: -10px;
+      top: 16px;
     }
   }
   .provider-socials {
     display: flex;
+    gap: 25px;
     img {
       width: 40px;
       height: 40px;
-      &:not(:last-child) {
-        margin-right: 10px;
-      }
     }
   }
   .collection-stats {
