--- a/src/styles/pages/_nft-details.scss
+++ b/src/styles/pages/_nft-details.scss
@@ -67,11 +67,18 @@
       .collection {
         display: flex;
         align-items: center;
-        img {
-          height: 50px;
-          aspect-ratio: 1/1;
+        gap: 10px;
+        .collection-logo {
+          background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
+          padding: 1px;
           border-radius: 100%;
-          margin-right: 10px;
+          height: 50px;
+          width: 50px;
+          img {
+            border-radius: 100%;
+            width: 100%;
+            height: 100%;
+          }
         }
         a {
           font-size: 24px;
