--- a/src/styles/components/_launchpad-item.scss
+++ b/src/styles/components/_launchpad-item.scss
@@ -46,6 +46,7 @@
     font-size: 18px;
     font-weight: 400;
     margin: 10px;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   }
   .up-coming {
     padding: 0 10px;
@@ -55,11 +56,12 @@
     font-size: 18px;
     font-weight: 400;
     margin: 10px;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   }
   .launchpad-name {
     font-size: 24px;
     line-height: 36px;
-    font-weight: 700;
+    font-weight: 600;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     @include to(xs) {
       font-size: 25px;
