--- a/src/styles/components/_collection-item.scss
+++ b/src/styles/components/_collection-item.scss
@@ -7,6 +7,7 @@
   padding: 25px;
   height: 150px;
   transition: 0.5s;
+  position: relative;
   cursor: pointer;
   @include to(md) {
     height: 100px;
@@ -43,6 +44,22 @@
     text-overflow: ellipsis;
     @include to(xs) {
       font-size: 16px;
+    }
+  }
+  .network {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 32px;
+    height: 32px;
+    background: rgba(255, 255, 255, 0.7);
+    border-radius: 100%;
+    padding: 5px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 100%;
     }
   }
   &:hover {
