--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -17,6 +17,7 @@
         background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
         border-radius: 10px;
         padding: 2px;
+        position: relative;
         .banner {
           height: 100%;
           border-radius: 10px;
@@ -31,6 +32,22 @@
             &:hover {
               transform: scale(1.2);
             }
+          }
+        }
+        .network {
+          position: absolute;
+          top: 10px;
+          right: 10px;
+          width: 32px;
+          height: 32px;
+          background: rgba(255, 255, 255, 0.7);
+          border-radius: 100%;
+          padding: 5px;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 100%;
           }
         }
       }
