--- a/src/styles/pages/_my-nft.scss
+++ b/src/styles/pages/_my-nft.scss
@@ -24,16 +24,25 @@
         flex-flow: column;
         margin-bottom: 20px;
       }
-      .left {
-        width: 153px;
+      .left-border {
         margin-right: 37px;
+        padding: 2px;
+        border-radius: 50%;
+        width: fit-content;
+        height: fit-content;
+        background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
         @include to(md) {
-          width: 130px;
           margin-right: 28px;
         }
         @include to(sm) {
           margin: 0;
           margin-bottom: 16px;
+        }
+        .left {
+          width: 153px;
+          @include to(md) {
+            width: 130px;
+          }
         }
       }
       .right {
@@ -135,9 +144,16 @@
     display: flex;
     align-items: center;
     margin-bottom: 56px;
-    .left {
-      width: 153px;
+    .left-border {
       margin-right: 37px;
+      padding: 2px;
+      border-radius: 50%;
+      width: fit-content;
+      height: fit-content;
+      background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
+      .left {
+        width: 153px;
+      }
     }
     .right {
       .top {
@@ -180,6 +196,13 @@
     }
   }
   .container {
+    .nodata {
+      margin: auto;
+      margin-top: 70px;
+      width: 50%;
+      max-width: 600px;
+      margin-bottom: 100px;
+    }
     .chakra-tabs__tab-panel {
       padding: 0;
     }
@@ -289,9 +312,16 @@
       }
     }
     .offering-make {
+      .border {
+        border-radius: 10px;
+        border: 1px solid #d7d7d7;
+      }
       margin-top: 40px;
       min-width: 1000px;
       overflow-x: auto;
+      .to {
+        color: #0bebd6;
+      }
       .item {
         display: flex;
         align-items: center;
@@ -427,6 +457,11 @@
     }
     .tab-activities {
       margin-top: 40px;
+      .border {
+        border-radius: 10px;
+        border: 1px solid #d7d7d7;
+        overflow: hidden;
+      }
       tbody {
         tr {
           .date {
@@ -460,6 +495,9 @@
         margin-bottom: 100px;
       }
     }
+  }
+  .app-pagination{
+    margin-top: 35px;
   }
 }
 .algin-center {
@@ -575,11 +613,7 @@
 }
 .table-activity {
   margin-top: 35px;
-
   table {
-    thead {
-    }
-
     tbody {
       tr {
         td {
@@ -618,9 +652,6 @@
               background-image: linear-gradient(300deg, #78e4ff, #ff48fa);
               background-origin: border-box;
               box-shadow: 2px 1000px 1px #353571 inset !important;
-
-              &:focus {
-              }
             }
           }
         }
