--- a/src/styles/pages/_collection-details.scss
+++ b/src/styles/pages/_collection-details.scss
@@ -19,6 +19,7 @@
     }
   }
   .provider-socials {
+    margin-top: 20px;
     display: flex;
     gap: 25px;
     img {
@@ -57,7 +58,7 @@
       align-items: center;
       justify-content: center;
       .stat-key {
-        font-size: 24px;
+        font-size: 20px;
         font-weight: 500;
         color: $light-cyan;
       }
