Style page aution, mynft, setting

--- a/src/styles/pages/_collection-details.scss
+++ b/src/styles/pages/_collection-details.scss
@@ -112,6 +112,7 @@
   .collection-content {
     width: 100%;
     .collection-item-list {
+      margin-top: 40px;
       .filter-row {
         display: flex;
         align-items: center;
