--- a/src/styles/pages/_my-nft.scss
+++ b/src/styles/pages/_my-nft.scss
@@ -483,6 +483,11 @@
     line-height: 38px;
     color: #ffffff;
   }
+  button {
+    &.chakra-modal__close-btn {
+      background: none!important;
+    }
+  }
   .form-auction {
     p {
       .price {
