--- a/src/styles/pages/_setting.scss
+++ b/src/styles/pages/_setting.scss
@@ -196,6 +196,14 @@
     }
     .methods {
       margin-bottom: 16px;
+      &.bell {
+        .left {
+          img {
+            width: 40px!important;
+            margin-right: 10px!important;
+          }
+        }
+      }
       h3 {
         font-weight: 500;
         font-size: 24px;
