fix:  RECEIVED OFFERED - show buton if nft-item of user

--- a/src/styles/pages/_nft-details.scss
+++ b/src/styles/pages/_nft-details.scss
@@ -414,6 +414,9 @@
     .app-pagination{
       margin-top: 25px;
     }
+    .to{
+      color: #0bebd6;
+    }
     .filter-row {
       display: flex;
       justify-content: flex-end;
