style: fix collection detail icons

--- a/src/styles/pages/_collection-details.scss
+++ b/src/styles/pages/_collection-details.scss
@@ -7,7 +7,7 @@
     font-family: SVN-Transformer;
     font-size: 72px;
     line-height: 72px;
-    margin-top: 20px;
+    margin: 20px 0;
     display: flex;
     align-items: center;
     position: relative;
