--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,6 +18,7 @@
 @import "./components/sort";
 @import "./components/app-alert";
 @import "./components/web3-modal";
+@import "./components/app-spinner";
 @import "./pages/error-page";
 @import "./pages/home";
 @import "./pages/nft-details";
