--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -11,14 +11,15 @@
       width: 100%;
       max-width: 1920px;
       .banner-border {
+        overflow: hidden;
         margin: 15px;
         height: 200px;
         width: 300px;
         background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
         border-radius: 10px;
-        padding: 2px;
         position: relative;
-        .banner {
+        span {
+          margin: 2px !important;
           height: 100%;
           border-radius: 10px;
           overflow: hidden;
