--- a/src/styles/components/_launchpad-item.scss
+++ b/src/styles/components/_launchpad-item.scss
@@ -25,13 +25,14 @@
     width: 100%;
     height: 200px;
     overflow: hidden;
-    .image-wrapper {
+    position: relative;
+    span {
+      margin: 2px !important;
       width: 100%;
       height: 100%;
       border-radius: 15px;
       overflow: hidden;
       img {
-        object-fit: cover;
         width: 100%;
         height: 100%;
         transition: 0.5s;
