perf: optimize performance

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -24,6 +24,7 @@
           border-radius: 10px;
           overflow: hidden;
           .banner-image {
+            background: $dark-purple;
             height: 100%;
             width: 100%;
             cursor: pointer;
