--- a/src/styles/components/_nft-item.scss
+++ b/src/styles/components/_nft-item.scss
@@ -32,10 +32,11 @@
     height: 170px;
     overflow: hidden;
     position: relative;
-    img {
+    img,
+    video {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
       transition: 0.5s;
     }
     .nft-network {
@@ -62,6 +63,9 @@
       color: $cyan;
       align-items: center;
       justify-content: space-between;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
       svg {
         height: 16px;
         margin-left: 5px;
@@ -116,7 +120,8 @@
   &:hover {
     box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 0.69);
     .nft-image {
-      img {
+      img,
+      video {
         transform: scale(1.1);
       }
     }
