--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -42,14 +42,13 @@
           right: 10px;
           width: 32px;
           height: 32px;
-          background: rgba(255, 255, 255, 0.7);
+          background: rgba(255, 255, 255, 0.2);
           border-radius: 100%;
           padding: 5px;
-          img {
+          svg {
             width: 100%;
             height: 100%;
-            object-fit: cover;
-            border-radius: 100%;
+            object-fit: contain;
           }
         }
       }
