--- a/src/styles/components/_app-layout.scss
+++ b/src/styles/components/_app-layout.scss
@@ -57,6 +57,7 @@
         justify-content: flex-end;
         animation: slideInRight 0.5s;
         .search-bar {
+          position: relative;
           margin-left: 20px;
           @include to(md) {
             display: none;
@@ -65,6 +66,33 @@
           border-radius: 16px;
           padding: 1px;
           width: 100%;
+          .result-box-wrapper {
+            position: absolute;
+            width: 100%;
+            top: 50px;
+            left: 0;
+            border-radius: 16px;
+            background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
+            padding: 1px;
+            box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.4);
+            animation: fadeIn 0.2s;
+            .result-box {
+              background: $dark-purple;
+              border-radius: 16px;
+              width: 100%;
+              height: fit-content;
+              padding: 20px;
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              .app-spinner {
+                margin-top: -80px;
+              }
+              .collection-item:not(:last-child) {
+                margin-bottom: 10px;
+              }
+            }
+          }
           input {
             border-radius: 16px;
             background: #180f5c;
