--- a/src/styles/configs/_chakra-custom.scss
+++ b/src/styles/configs/_chakra-custom.scss
@@ -118,8 +118,11 @@
 }
 
 .chakra-toast__inner {
-  .chakra-alert {
+  .chakra-alert.css-1iclwfz{
     background-color: #32b632;
+  }
+  .chakra-alert.css-o8oj6j {
+    background-color: #ee0505;
   }
   .chakra-alert__icon {
     color: #fff;
