--- a/src/styles/pages/_my-nft.scss
+++ b/src/styles/pages/_my-nft.scss
@@ -664,7 +664,7 @@
         td {
           .name-item {
             margin-left: 10px;
-
+            color: #0bebd6;
             .animverse {
               display: flex;
               align-items: center;
