--- a/src/styles/components/_app-layout.scss
+++ b/src/styles/components/_app-layout.scss
@@ -163,7 +163,9 @@
         .network {
           .network-nav {
             background: transparent;
-            svg {
+            svg,img {
+              display: block;
+              max-width: fit-content;
               width: 20px;
               height: 20px;
             }
@@ -172,9 +174,9 @@
             display: flex;
             align-items: center;
             gap: 10px;
-            svg {
-              height: 30px;
-              width: 30px;
+            svg,img {
+              height: 25px;
+              width: 25px;
             }
           }
           .menu-item {
