--- a/src/styles/pages/_setting.scss
+++ b/src/styles/pages/_setting.scss
@@ -87,11 +87,22 @@
       @include to(sm) {
         margin-bottom: 16px;
       }
-      img {
+      .border {
+        width: 150px;
+        height: 150px;
         margin-right: 30px;
-        @include to(sm) {
-          width: 80px;
-          margin-right: 20px;
+        border-radius: 100%;
+        padding: 2px;
+        background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
+        overflow: hidden;
+        img {
+          display: block;
+          width: 100%;
+          height: 100%;
+          border-radius: 100%;
+          @include to(sm) {
+            width: 80px;
+          }
         }
       }
       p {
@@ -102,7 +113,7 @@
           font-size: 15px;
           line-height: 24px;
         }
-        button {
+        label {
           color: #0bebd6;
           border-bottom: 1px solid #0bebd6;
         }
