--- a/src/styles/pages/_activities.scss
+++ b/src/styles/pages/_activities.scss
@@ -58,6 +58,8 @@
 
     .type {
       img {
+        width: 50px;
+        height: 50px;
         margin-right: 15px;
       }
       span {
@@ -75,6 +77,9 @@
 .align-center {
   display: flex;
   align-items: center;
+}
+.bold{
+  font-weight: 600;
 }
 .sort {
   display: flex;
